app/javascript/frontend/styles/_common.scss
/* ... */
.nav-tabs {
  --bs-border-width: 0;

  @include media-breakpoint-down(md) {
    .nav-item {
      padding-left: 2rem;
      padding-right: 2rem;
    }
  }

  @include media-breakpoint-down(sm) {
    .nav-item {
      width: 100%;
      text-align: center;
      border-radius: $border-radius;

      &.active::after {
        border: 0;
      }
    }
  }

  .nav-item {
    padding: 1rem 3rem;
    font-family: $slab-font-family;
    letter-spacing: .5px;
    font-weight: 600;

    &.active {
      --bs-nav-tabs-link-active-bg: #{$blue};
      --bs-nav-tabs-link-active-color: #{$white};
      --bs-nav-tabs-border-radius: 0.25rem;
      position: relative;

      &::after {
        content: '';
        width: 0;
        height: 0;
        border-style: solid;
        border-width: 13px 20px 0;
        border-color: $blue transparent transparent;
        position: absolute;
        transform: translateX(-50%);
        left: 50%;
        bottom: -11px;
      }
    }
  }
}

.tab-pane {
  padding: ($spacer * 2) $spacer;

  @include media-breakpoint-up(md) {
    box-shadow: $box-shadow;
    border-radius: $border-radius;
    padding: $spacer * 3;
  }
}

.material-icons {

  &--thumbnail {
    font-size: 200px;
    height: 200px;
    width: 200px;
    color: $black;
    background: $gray-85;
  }

  &--copy {
    font-size: 14px;
  }

}

.thumbnail-icon {
  background: $gray-85;
  min-height: 200px;
  min-width: 200px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 5px;
}

.thumbnail-image {
  min-height: 200px;
  min-width: 200px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 5px;
}

.thumbnail-card {
  float: left;
  min-width: 250px;
  min-height: 250px;
  max-height: 250px;
  box-shadow: $box-shadow-sm;
  background: $gray-100;
  border: 1px solid $gray-200;
  border-radius: $border-radius;
  margin-right: 25px;
  margin-bottom: 10px;
}

.thumbnail-card-index {
  min-width: 215px;
  width: 215px;
  height: 215px;
  box-shadow: $box-shadow-sm;
  background: $gray-100;
  border: 1px solid $gray-200;
  border-radius: $border-radius;
  margin-left: 10px;
  margin-top: 10px;
  margin-bottom: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.resource-page-thumbnail {
  margin-left: 17px;
  min-width: 200px;
  display: inline-block;
}

.bordered-thumbnail-image {
  min-height: 200px;
  min-width: 200px;
  border: 1px solid $gray-200;
  background-color: $white;
}

.border {
  &.border-danger {
    &.rounded {
      &.p-3 {
        border-radius: .3rem !important;
        border-width: 1px !important;
      }
    }
  }
}

.col-md-6 {
  &.col-lg-4 {
    &.col-xxl-3 {
      &.version-timeline__version {
        padding-left: 30px;
        padding-right: 30px;
      }
    }
  }
}

.btn-close {
  &.float-end {
    width: .25rem;
    height: .25rem;
  }
}

form.edit-work-visibility .label {
  display: none;
}

.alert-warning {
  color: $alert-warning-text;
}

.alert-info {
  color: $alert-info-text;
}

dialog {
  padding: $spacer * 2;
  border: 1px solid $gray-300;
  border-radius: $border-radius;
  max-width: 50%;
  font-family: $slab-font-family;
}

code {
  color: $dark-green;
}

details {
  border: 0;
  padding: 0;
  margin: 0;
}

details[open] {
  background: transparent;
}

summary:focus {
  outline: none;
}

